--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -180,50 +180,48 @@ test_config:
   # Llama 3.2 1B Prefill tests with different seq_len and batch_size
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq128-batch1-single_device-inference:
     status: EXPECTED_PASSING
-    seq_len: 128
-    batch_size: 1
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq128-batch2-single_device-inference:
     status: EXPECTED_PASSING
-    seq_len: 128
-    batch_size: 2
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq1024-batch1-single_device-inference:
     status: EXPECTED_PASSING
-    seq_len: 1024
-    batch_size: 1
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq1024-batch2-single_device-inference:
     status: EXPECTED_PASSING
-    seq_len: 1024
-    batch_size: 2
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq2048-batch1-single_device-inference:
+    required_pcc: 0.98 # Is 0.986 for n150 and p150
     status: EXPECTED_PASSING
-    seq_len: 2048
-    batch_size: 1
+    assert_pcc: false 
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq2048-batch2-single_device-inference:
+    required_pcc: 0.98 # Is 0.984 for n150 and p150
     status: EXPECTED_PASSING
-    seq_len: 2048
-    batch_size: 2
+    assert_pcc: false
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq4096-batch1-single_device-inference:
-    status: EXPECTED_PASSING
-    seq_len: 4096
-    batch_size: 1
+    arch_overrides:
+      n150:
+        status: NOT_SUPPORTED_SKIP
+        reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
+      p150:
+        status: EXPECTED_PASSING
+        assert_pcc: false # Is 0.895. Debugging blocked by https://github.com/tenstorrent/tt-mlir/issues/6872
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq4096-batch2-single_device-inference:
-    status: EXPECTED_PASSING
-    seq_len: 4096
-    batch_size: 2
+    arch_overrides:
+      n150:
+        status: NOT_SUPPORTED_SKIP
+        reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
+      p150:
+        status: EXPECTED_PASSING
+        assert_pcc: false # Is 0.896. Debugging blocked by https://github.com/tenstorrent/tt-mlir/issues/6872
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq8192-batch1-single_device-inference:
-    status: EXPECTED_PASSING
-    seq_len: 8192
-    batch_size: 1
+    status: NOT_SUPPORTED_SKIP
+    reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq8192-batch2-single_device-inference:
-    status: EXPECTED_PASSING
-    seq_len: 8192
-    batch_size: 2
+    status: NOT_SUPPORTED_SKIP
+    reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
