--- a/.github/workflows/manual-nightly-release.yml
+++ b/.github/workflows/manual-nightly-release.yml
@@ -8,19 +8,11 @@ on:
         type: string
         required: true
 
-# permissions:
-#   contents: write
-#   actions: write
-#   id-token: write
-#   packages: write
-#   checks: write
 permissions:
-  pages: write
-  id-token: write
   contents: write
   actions: write
+  id-token: write
   packages: write
-  attestations: write
   checks: write
 
 jobs:
@@ -47,15 +39,15 @@ jobs:
       is_nightly_release: true
       release_tag_override: ${{ inputs.release_tag }}
 
-  # build-release-docker:
-  #   uses: ./.github/workflows/call-build-release-docker.yml
-  #   needs: [ publish-release-wheel, build-ttxla ]
-  #   secrets: inherit
-  #   with:
-  #     wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-  #     wheel_version_override: ${{ inputs.release_tag }}
+  build-release-docker:
+    uses: ./.github/workflows/call-build-release-docker.yml
+    needs: [ build-ttxla ]
+    secrets: inherit
+    with:
+      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+      wheel_version_override: ${{ inputs.release_tag }}
 
   # # ommited during testing
   # # release-tests:
