--- a/.github/workflows/manual-nightly-release.yml
+++ b/.github/workflows/manual-nightly-release.yml
@@ -28,16 +28,16 @@ jobs:
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  publish-release-wheel:
-    uses: ./.github/workflows/call-publish-release-wheel.yml
-    secrets: inherit
-    needs: [ build-ttxla ]
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      is_nightly_release: true
-      release_tag_override: ${{ inputs.release_tag }}
+  # publish-release-wheel:
+  #   uses: ./.github/workflows/call-publish-release-wheel.yml
+  #   secrets: inherit
+  #   needs: [ build-ttxla ]
+  #   with:
+  #     wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     is_nightly_release: true
+  #     release_tag_override: ${{ inputs.release_tag }}
 
   build-release-docker:
     uses: ./.github/workflows/call-build-release-docker.yml
