--- a/.github/workflows/manual-nightly-release.yml
+++ b/.github/workflows/manual-nightly-release.yml
@@ -14,6 +14,8 @@ permissions:
   id-token: write
   packages: write
   checks: write
+  pages: write
+  attestations: write
 
 jobs:
   build-image:
