Implemented pjrt tensor (#2993)
Since PJRT does not operate on tensors but on BufferInstances (where
each BufferInstance represent single tensor shard), we will use our own
tensor abstraction.

Each shard will hold reference to pjrt tensor that is part of.

Tensor can be constructed from shards or from an existing tensor.

Whenever tensor is constructed, it is moved into tensor pool and
whenever it is destructed, it is moved out.

This abstraction gives us control over host and device tensors and hides
complexity behind simple APIs.

--- a/pjrt_implementation/src/api/CMakeLists.txt
+++ b/pjrt_implementation/src/api/CMakeLists.txt
@@ -34,6 +34,8 @@ add_library(TTPJRTApi
     "module_builder/module_builder.cc"
     "plugin_attributes.cc"
     "serialized_executable_instance.cc"
+    "tensor.cc"
+    "tensor_pool.cc"
 )
 
 target_include_directories(TTPJRTApi PUBLIC
