--- a/.github/workflows/call-build-release-docker.yml
+++ b/.github/workflows/call-build-release-docker.yml
@@ -39,10 +39,12 @@ permissions:
 jobs:
   build-release-docker:
     name: Build tt-xla release Docker image
-    runs-on: ubuntu-latest
+    runs-on: builder
     outputs:
       docker-image: ${{ steps.build-docker.outputs.docker-image }}
       docker-image-base: ${{ steps.build-docker.outputs.docker-image-base }}
+    env:
+      GH_TOKEN: ${{ github.token }}
     steps:
       - name: Fix workspace permissions issue
         run: sudo chown -R $USER:$USER $GITHUB_WORKSPACE
