--- a/.github/workflows/workflow-run-collect-data.yml
+++ b/.github/workflows/workflow-run-collect-data.yml
@@ -7,6 +7,7 @@ on:
       - "On PR"
       - "On push"
       - "On nightly"
+      - "On nightly QB2"
       - "On weekly"
       - "On weekly training"
       - "Performance Benchmark"
