--- a/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_tensor_parallel.yaml
@@ -11,7 +11,7 @@ test_config:
   falcon/pytorch-tiiuae/Falcon3-10B-Base-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
-    required_pcc: 0.985 # 0.989 (p150)
+    required_pcc: 0.977 # https://github.com/tenstorrent/tt-xla/issues/3180
 
   qwen_2_5/causal_lm/pytorch-7b_instruct-llm_decode-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
